[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Raiden Hasegawa <raiden@slightdata.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"

[dev-dependencies]
reqwest = "0.10.10"
tokio = "0.2.22"
