[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Raiden Hasegawa <raiden@slightdata.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
# We need the optional `derive` feature to use `serde`'s procedural macros:
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1", features = ["derive"]}

[dev-dependencies]
reqwest = "0.10.10"
tokio = "0.2.22"
